Fix issue on IOS

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
   align-items: center;
   justify-content: center;
   background-color: #F6EFE9;
-  font-family: "Black Delights", sans-serif;
+  font-family: "Black Delights Font", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
 }
 
 h1 {
